--- a/.env.sample
+++ b/.env.sample
@@ -3,11 +3,12 @@ HOST_SERVER_PORT=3000
 # development / staging / production
 NODE_ENV=development
 
-# mysql specific config
-MYSQL_HOST=127.0.0.1
-MYSQL_USER=root
-MYSQL_PASSWORD=admin
-MYSQL_PORT=3307
+# pg specific config
+PG_HOST=127.0.0.1
+PG_USER=root
+PG_PASSWORD=admin
+PG_SCHEMA=spine
+PG_PORT=3307
 
 # jwt config
 JWT_AUTHKEY=somekey
