--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,12 @@
             "double"
         ],
         "no-console": "warn",
+        "no-unused-vars": [
+            "error",
+            {
+                "ignoreRestSiblings": true
+            }
+        ],
         "@typescript-eslint/no-floating-promises": "error",
         "@typescript-eslint/explicit-function-return-type": "warn",
         "@typescript-eslint/no-inferrable-types": "off",
