fix: update sample user and port

--- a/.env.sample
+++ b/.env.sample
@@ -5,9 +5,9 @@ NODE_ENV=development
 
 # pg specific config
 PG_HOST=127.0.0.1
-PG_USER=root
+PG_USER=postgres
 PG_PASSWORD=admin
-PG_PORT=3307
+PG_PORT=5432
 
 # jwt config
 JWT_AUTHKEY=somekey
