--- a/.env.sample
+++ b/.env.sample
@@ -17,4 +17,4 @@ JWT_AUTHKEY=somekey
 # same as HOST_SERVER_PORT but specific for compose (development purposes)
 COMPOSE_SERVER_PORT=3001
 # the port you want want to use to interact with the db outside the composed container
-COMPOSE_MYSQL_PORT=3308
+COMPOSE_PG_PORT=5434
