--- a/.eslintrc
+++ b/.eslintrc
@@ -34,6 +34,19 @@
             {
                 "default": "array-simple"
             }
+        ],
+        "@typescript-eslint/naming-convention": [
+            "warn",
+            {
+                "selector": "interface",
+                "format": [
+                    "PascalCase"
+                ],
+                "custom": {
+                    "regex": "^I[A-Z]",
+                    "match": true
+                }
+            }
         ]
     }
 }
