feat: serve static files from server

--- a/.env.sample
+++ b/.env.sample
@@ -18,3 +18,6 @@ JWT_AUTHKEY=somekey
 COMPOSE_SERVER_PORT=3001
 # the port you want want to use to interact with the db outside the composed container
 COMPOSE_PG_PORT=5434
+
+# path for storing images
+IMAGES_PATH=path/to/images
