--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.10.3",
+    "@types/sharp": "^0.30.0",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^7.32.0",
@@ -44,10 +47,13 @@
     "minimist": "^1.2.5",
     "mkdirp": "^1.0.4",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
+    "sharp": "^0.30.3",
     "sinon": "^12.0.1",
     "tsyringe": "^4.6.0",
+    "uuid": "^8.3.2",
     "winston": "^3.3.3"
   }
 }
