--- a/.env.sample
+++ b/.env.sample
@@ -3,6 +3,9 @@ HOST_SERVER_PORT=3000
 # development / staging / production
 NODE_ENV=development
 
+# CORS
+CORS_ALLOW_ORIGIN
+
 # pg specific config
 PG_HOST=127.0.0.1
 PG_USER=postgres
