--- a/.env.sample
+++ b/.env.sample
@@ -4,7 +4,7 @@ HOST_SERVER_PORT=3000
 NODE_ENV=development
 
 # CORS
-CORS_ALLOW_ORIGIN
+CORS_ALLOW_ORIGIN=http://localhost:3000
 
 # pg specific config
 PG_HOST=127.0.0.1
@@ -23,4 +23,4 @@ COMPOSE_SERVER_PORT=3001
 COMPOSE_PG_PORT=5434
 
 # path for storing images
-IMAGES_PATH=path/to/images
+PROFILE_PICTURES_PATH=path/to/images
