--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build && node dist/server.js",
-    "lint": "eslint . --ext .ts",
-    "build": "rimraf ./dist && npx tsc",
-    "watch": "npx tsc --watch",
+    "lint": "eslint --ext .ts src",
+    "build": "tsc",
+    "clean": "rimraf ./dist ./node_modules",
+    "watch": "tsc --watch",
     "compose": "docker-compose build --no-cache && docker-compose up",
     "migration:create": "node scripts/migrations/create",
     "test": "jest"
@@ -17,43 +18,43 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/jest": "^27.0.3",
+    "@types/jest": "^28.1.6",
     "@types/multer": "^1.4.7",
-    "@types/node": "^16.10.3",
-    "@types/sharp": "^0.30.0",
+    "@types/node": "^18.6.0",
+    "@types/sharp": "^0.30.4",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "eslint": "^7.32.0",
-    "jest": "^27.4.3",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "eslint": "^8.20.0",
+    "jest": "^28.1.3",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.1.3",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.4.4"
+    "ts-jest": "^28.0.7",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
-    "@types/jsonwebtoken": "^8.5.5",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
-    "@types/pg": "^8.6.4",
-    "@types/sinon": "^10.0.6",
+    "@types/pg": "^8.6.5",
+    "@types/sinon": "^10.0.13",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "helmet": "^4.6.0",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "helmet": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
     "minimist": "^1.2.6",
     "mkdirp": "^1.0.4",
     "morgan": "^1.10.0",
-    "multer": "^1.4.4",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
-    "sharp": "^0.30.5",
-    "sinon": "^12.0.1",
-    "tsyringe": "^4.6.0",
+    "sharp": "^0.30.7",
+    "sinon": "^14.0.0",
+    "tsyringe": "^4.7.0",
     "uuid": "^8.3.2",
-    "winston": "^3.3.3"
+    "winston": "^3.8.1"
   }
 }
