--- a/.eslintrc
+++ b/.eslintrc
@@ -21,8 +21,8 @@
         ],
         "no-console": "warn",
         "no-unused-vars": [
-            "error",
-            {
+            "warn",
+{
                 "ignoreRestSiblings": true
             }
         ],
