--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "helmet": "^5.1.1",
+    "inversify": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
     "minimist": "^1.2.6",
     "mkdirp": "^1.0.4",
@@ -53,7 +54,6 @@
     "reflect-metadata": "^0.1.13",
     "sharp": "^0.30.7",
     "sinon": "^14.0.0",
-    "tsyringe": "^4.7.0",
     "uuid": "^8.3.2",
     "winston": "^3.8.1"
   }
