--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
-    "editor.formatOnSave": true,
-    "typescript.format.semicolons": "insert",
-    "editor.bracketPairColorization.enabled": true
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
