--- a/.eslintrc
+++ b/.eslintrc
@@ -1,52 +1,45 @@
 {
-    "root": true,
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "project": "./tsconfig.json"
-    },
-    "plugins": [
-        "@typescript-eslint"
+  "root": true,
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  },
+  "plugins": ["@typescript-eslint"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
+  "rules": {
+    "comma-dangle": "warn",
+    "no-else-return": "warn",
+    "quotes": ["warn", "double"],
+    "no-console": "warn",
+    "no-unused-vars": [
+      "warn",
+      {
+        "ignoreRestSiblings": true
+      }
     ],
-    "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/eslint-recommended",
-        "plugin:@typescript-eslint/recommended"
+    "@typescript-eslint/no-floating-promises": "error",
+    "@typescript-eslint/explicit-function-return-type": "warn",
+    "@typescript-eslint/no-inferrable-types": "off",
+    "@typescript-eslint/array-type": [
+      "warn",
+      {
+        "default": "array-simple"
+      }
     ],
-    "rules": {
-        "comma-dangle": "warn",
-        "no-else-return": "warn",
-        "quotes": [
-            "warn",
-            "double"
-        ],
-        "no-console": "warn",
-        "no-unused-vars": [
-            "warn",
-{
-                "ignoreRestSiblings": true
-            }
-        ],
-        "@typescript-eslint/no-floating-promises": "error",
-        "@typescript-eslint/explicit-function-return-type": "warn",
-        "@typescript-eslint/no-inferrable-types": "off",
-        "@typescript-eslint/array-type": [
-            "warn",
-            {
-                "default": "array-simple"
-            }
-        ],
-        "@typescript-eslint/naming-convention": [
-            "warn",
-            {
-                "selector": "interface",
-                "format": [
-                    "PascalCase"
-                ],
-                "custom": {
-                    "regex": "^I[A-Z]",
-                    "match": true
-                }
-            }
-        ]
-    }
+    "@typescript-eslint/naming-convention": [
+      "warn",
+      {
+        "selector": "interface",
+        "format": ["PascalCase"],
+        "custom": {
+          "regex": "^I[A-Z]",
+          "match": true
+        }
+      }
+    ]
+  }
 }
